<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="app__name">Food Runner</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="enter_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits_">Mobile Number (10 digits)</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="data">Here comes the data</string>

</resources>