<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/rlContentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app__name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/enter_mobile_number_and_email_below"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterMobile"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotMobile"
            android:layout_margin="10dp"
            android:background="@drawable/text_boundary_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotEmail"
            android:id="@+id/btnForgotNext"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            />


    </RelativeLayout>


</RelativeLayout>