<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:hint="@string/name_min_3_characters"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:hint="@string/mobile_number_10_digits"
                android:inputType="phone"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPhoneNumber"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:hint="@string/delivery_address"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:hint="@string/password_min_4_characters"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="40dp"
                android:layout_marginRight="12dip"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </RelativeLayout>


    </RelativeLayout>

</ScrollView>